<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="100dp">

    <TextView
        android:id="@+id/device_control_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@android:style/TextAppearance.DeviceDefault.Large" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/txt_min_value" />

        <SeekBar
            android:layout_width="700dp"
            android:layout_height="wrap_content"
            android:id="@+id/device_control_slider"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:id="@+id/txt_max_value" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_value_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="1"/>

</LinearLayout>